--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,18 +1,22 @@
 [prompt1]
 input_prompt = """
-Analyse les textes extraits de deux images de chèque : recto et verso. Ton objectif est de généraliser l'extraction pour tout type de chèque, en tenant compte des variations de disposition, des formats et des erreurs courantes des OCR. Compare les résultats de deux OCR (TrOCR et Qari-OCR) et sélectionne la meilleure valeur pour chaque champ en fonction du contexte. Si un champ est incertain ou non détecté, marque-le comme "Non détecté".
+Analyse les textes extraits d'une image de chèque (recto, et optionnellement verso si fourni). Ton objectif est de généraliser l'extraction pour tout type de chèque tunisien, en tenant compte des variations de disposition, des formats (texte latin et arabe), et des erreurs courantes d'extraction. Extrais les champs suivants et retourne les résultats sous forme de JSON. Si un champ est incertain, manquant, ou non détecté, marque-le comme "Non détecté".
 
 Champs à extraire :
-- Rib1 : un numéro de 20 chiffres généralement au recto du chèque, associé au propriétaire du chèque.
-- Rib2 : un numéro de 20 chiffres généralement au verso du chèque, associé au receveur (non présent au recto).
-- nom : nom du propriétaire du chèque (personne ou société), imprimé, pas manuscrit.
-- nomreciver : nom du receveur, manuscrit sur le chèque.
-- plafond : montant en chiffres, imprimé sur le chèque.
-- num_cheque : numéro du chèque, imprimé.
-- montant : montant manuscrit en texte et chiffres, généralement en haut à droite du chèque.
-- date : date manuscrite, généralement en bas à droite du chèque.
+- Rib1 : un numéro de 20 chiffres ou un code RIB complet (ex. 01 006 035112 0019 58 12) généralement au recto, associé au propriétaire du chèque, souvent centré ou en bas.
+- Rib2 : un numéro de 20 chiffres ou un code RIB écrit au verso du chèque page blanc qui contient que le Rib2, associé au receveur, sinon "Non détecté" si le verso n'est pas fourni.
+- nom : nom du propriétaire du chèque (personne ou société), imprimé en latin ou arabe, souvent en haut ou au centre.
+- nomreciver : nom du receveur, manuscrit en latin ou arabe, souvent sur une ligne dédiée.
+- plafond : montant maximum en chiffres avec devise (ex. 1000 DT), imprimé, généralement près du numéro de chèque.
+- num_cheque : numéro du chèque, imprimé, souvent en haut à gauche.
+- montant : montant en chiffres uniquement (ex. 50.03), manuscrit ou imprimé, généralement en haut à droite, ignorer les descriptions en lettres.
+- date : date manuscrite ou imprimée au format JJ/MM/AAAA (ex. 31/08/2025), généralement en bas à droite.
 
-Retourne les résultats sous forme de JSON avec chaque champ et sa valeur.
+Instructions supplémentaires :
+- Privilégie les textes imprimés pour "nom", "plafond", et "num_cheque".
+- Privilégie les textes manuscrits pour "nomreciver", "montant", et "date".
+- Si deux images (recto et verso) sont fournies, combine les informations, en extrayant Rib2 du verso.
+- Tolère les variations de disposition et les erreurs typographiques (ex. chiffres mal lus, texte partiel).
 """
 
 [google]
