--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -7,7 +7,7 @@ Champs à extraire :
 - Rib2 : un numéro de 20 chiffres ou un code RIB écrit au verso du chèque page blanc qui contient que le Rib2, associé au receveur, sinon "Non détecté" si le verso n'est pas fourni.
 - nom : nom du propriétaire du chèque (personne ou société), imprimé en latin ou arabe, souvent en haut ou au centre.
 - nomreciver : nom du receveur, manuscrit en latin ou arabe, souvent sur une ligne dédiée.
-- plafond : montant maximum en chiffres avec devise (ex. 1000 DT), imprimé, généralement près du numéro de chèque.
+- plafond : montant maximum en chiffres avec devise , imprimé, généralement près du numéro de chèque si dans l extraction il ya DT supprimer cette exprestion .
 - num_cheque : numéro du chèque, imprimé, souvent en haut à gauche.
 - montant : montant en chiffres uniquement (ex. 50.03), manuscrit ou imprimé, généralement en haut à droite, ignorer les descriptions en lettres.
 - date : date manuscrite ou imprimée au format JJ/MM/AAAA (ex. 31/08/2025), généralement en bas à droite.
